@@ -33,7 +33,7 @@ GTTLVUNDUMP test/resources/tlv/dummy.txt | GTTLVDUMP -D test/resources/desc -pP
 # Set -p and -P flags for pretty print keys and values.
 
 GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -D test/resources/desc -pP
->>> /TLV\[0200\]:Aggregation PDU:.*
+>>> /TLV\[0200\]:.*
 TLV\[0123\]:Dummy PDU:.*
   TLV\[1f\]: Dummy INT: 26/
 >>>= 0
@@ -42,10 +42,9 @@ TLV\[0123\]:Dummy PDU:.*
 # Load test description files with '-D'.
 # Use TLV file with dummy data and KSI TLV element.
 # Set -p and -P flags for pretty print keys and values.
-# Set -o flag to override default descriptions.
 
-GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -D test/resources/desc -pP -o
->>> /TLV\[0200\]:Aggregation PDU:.*
+GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -D test/resources/desc -pP
+>>> /TLV\[0200\]:.*
 TLV\[0123\]:Dummy PDU:.*
   TLV\[1f\]: Dummy INT: 26/
 >>>= 0
@@ -54,10 +53,8 @@ TLV\[0123\]:Dummy PDU:.*
 # Load test description files with '-D'.
 # Use TLV file with dummy data and KSI TLV element.
 # Set -p and -P flags for pretty print keys and values.
-# Set -o flag to override default descriptions.
-# Set -i flag to ignore default descriptions (-o should have no effect).
 
-GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -D test/resources/desc -pP -o -i
+GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -D test/resources/desc -pP
 >>> /TLV\[0200\]:.*
 TLV\[0123\]:Dummy PDU:.*
   TLV\[1f\]: Dummy INT: 26/
@@ -68,7 +65,7 @@ TLV\[0123\]:Dummy PDU:.*
 # Set -p and -P flags for pretty print keys and values.
 
 GTTLVUNDUMP test/resources/tlv/dummy_and_known_pdu.txt | GTTLVDUMP -pP
->>> /TLV\[0200\]:Aggregation PDU:.*
+>>> /TLV\[0200\]:.*
 TLV\[0123\]:.*
   TLV\[1f\]: 1a/
 >>>= 0
@@ -80,18 +77,6 @@ TLV\[0123\]:.*
 # in default descriptions.
 
 GTTLVDUMP test/resources/sig/ok-sig-2014-08-01.1.ksig -D test/resources/desc/modified_orig -pP
->>> /TLV\[0800\]:.*/
->>>2 /.*modified_orig\/800.desc:3 - duplicate description.*/
->>>= 0
-
-###############################################################################
-# Dump KSI signature file.
-# Set -p and -P flags for pretty print keys and values.
-# Set -o flag to override default descriptions.
-# Provide a modified description file with duplicate entries which are present
-# in default descriptions.
-
-GTTLVDUMP test/resources/sig/ok-sig-2014-08-01.1.ksig -D test/resources/desc/modified_orig -pP -o
 >>> /TLV\[0800\]:>>>>Uni-signature PDU.*/
 >>>2
 >>>= 0
@@ -102,7 +87,7 @@ GTTLVDUMP test/resources/sig/ok-sig-2014-08-01.1.ksig -D test/resources/desc/mod
 # Set -i flag to ignore default descriptions.
 # Provide a modified description file with duplicate entries.
 
-GTTLVDUMP test/resources/sig/ok-sig-2014-08-01.1.ksig -D test/resources/desc/duplicate_in_file -pP -i
+GTTLVDUMP test/resources/sig/ok-sig-2014-08-01.1.ksig -D test/resources/desc/duplicate_in_file -pP
 >>> /TLV\[0800\]:.*/
 >>>2 /.*duplicate_in_file\/ksi.desc:22 - duplicate description.*/
 >>>= 0
