@@ -1,3 +1,4 @@
+* IMPROVEMENT: Simplified the loading of custom description files.
 * IMPROVEMENT: Removed size_t defined check.
 * FEATURE: Automatic file magic bytes detection for known formats.
 * BUGFIX: Setting gttlvgrep (in case of '-r') and gttlvwrap stdout mode to binary.
